srcs/yaml/deployment-ftps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftps
  labels:
    io.kompose.service: ftps
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: ftps
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: ftps
    spec:
      containers:
      - image: image-ftps
        imagePullPolicy: Never
        name: ftps
        ports:
        - containerPort: 21
          hostPort: 21
        - containerPort: 21000
          hostPort: 21000
        volumeMounts:
        - name: ftps-persistent-storage
          mountPath: /ftps
      volumes:
      - name: ftps-persistent-storage
        persistentVolumeClaim:
          claimName: ftps-pv-claim
