srcs/yaml/deployment-grafana.yaml
apiVersion: v1
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-app
  template:
    metadata:
      labels:
        app: grafana-app
    spec:
      containers:
      - name: grafana
        image: image-grafana
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
