srcs/yaml/deployment-influxdb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb
  labels:
    io.kompose.service: influxdb
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: influxdb
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: influxdb
    spec:
      containers:
      - name: influxdb
        image: image-influxdb
        imagePullPolicy: Never
        ports:
        - containerPort: 8086
        volumeMounts:
        - name: influxdb-persistent-storage
          mountPath: /var/lib/influxdb
      volumes:
      - name: influxdb-persistent-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
