srcs/yaml/deployment-mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mysql
  template:
    metadata:
      labels:
        io.kompose.service: mysql
    spec:
      containers:
      - name: mysq
        image: image-mysql
        imagePullPolicy: Never
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: "/var/lib/mysql"
        securityContext:
          privileged: true
        ports:
        - name: mysql
          containerPort: 3306
      restartPolicy: Always
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
