srcs/yaml/deployment-nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    io.kompose.service: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: image-nginx
        imagePullPolicy: Never
        name: nginx
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        - containerPort: 30022
          name: ssh
