srcs/yaml/deployment-phpmyadmin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: phpmyadmin
  name: phpmyadmin-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: phpmyadmin
  template:
    metadata:
      labels:
        io.kompose.service: phpmyadmin
    spec:
      containers:
      - name: phpmyadmin
        imagePullPolicy: Never
        image: phpmyadminalban
        ports:
        - containerPort: 80
          name: http
