srcs/yaml/deployment-telegraf.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-deployment
  labels:
    app: telegraf-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf-app
  template:
    metadata:
      labels:
        app: telegraf-app
    spec:
      containers:
      - name: telegraf
        image: image-telegraf
        imagePullPolicy: Never
        ports:
        - containerPort: 4999
        volumeMounts:
        - name: config
          mountPath: "/etc/telegraf"
        - name: dockersock
          mountPath: "/var/run/docker.sock"
      volumes:
      - name: config
        configMap:
          name: telegraf-config
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
