srcs/yaml/deployment-wordpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
  labels:
    io.kompose.service: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: wordpress
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: wordpress
    spec:
      volumes:
      - name: wp-persistent-storage
        persistentVolumeClaim:
          claimName: wp-pv-claim
      containers:
      - image: image-wordpress
        imagePullPolicy: Never
        name: wordpress
        ports:
        - containerPort: 80
        - containerPort: 443
        volumeMounts:
        - name: wp-persistent-storage
          mountPath: "/var/www/html"
