srcs/yaml/grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-svc
  labels:
    app: grafana-app
spec:
  type: NodePort
  ports:
  - port: 3000
    nodePort: 3000
    protocol: TCP
    name: http
  selector:
    app: grafana-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-deployment
  labels:
    app: grafana-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana-app
  template:
    metadata:
      labels:
        app: grafana-app
    spec:
      containers:
      - name: grafana
        image: grafana-image
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
