srcs/yaml/influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb-svc
  labels:
    app: influxdb-app
spec:
  type: NodePort
  ports:
  - port: 8086
    nodePort: 8086
    protocol: TCP
    name: http
  selector:
    app: influxdb-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: influxdb-deployment
  labels:
    app: influxdb-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: influxdb-app
  template:
    metadata:
      labels:
        app: influxdb-app
    spec:
      containers:
      - name: influxdb
        image: influxdb:alpine
        ports:
        - containerPort: 8086
        volumeMounts:
        - name: influxdb-persistent-storage
          mountPath: /var/lib/influxdb
      volumes:
      - name: influxdb-persistent-storage
        persistentVolumeClaim:
          claimName: influxdb-pv-claim
