srcs/yaml/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    io.kompose.service: nginx
spec:
  selector:
    io.kompose.service: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-ssh-https
  labels:
    io.kompose.service: nginx
spec:
  type: NodePort
  selector:
    io.kompose.service: nginx
  ports:
    - name: ssh
      port: 2222
      nodePort: 2222
    - name: https
      nodePort: 443
      port: 443
