srcs/yaml/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    io.kompose.service: nginx
spec:
  selector:
    io.kompose.service: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    io.kompose.service: nginx
spec:
  type: NodePort
  selector:
    io.kompose.service: nginx
  ports:
    - name: ssh
      port: 4000
      nodePort: 4000
    - name: https
      nodePort: 443
      port: 443
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    io.kompose.service: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nginx
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.service: nginx
    spec:
      containers:
      - image: nginxalban
        imagePullPolicy: Never
        name: nginx
        ports:
        - containerPort: 80
          name: http
        - containerPort: 443
          name: https
        - containerPort: 4000
          name: ssh
