srcs/yaml/service-ftps.yaml
apiVersion: v1
kind: Service
metadata:
  name: ftps
  labels:
    io.kompose.service: ftps
spec:
  ports:
    - port: 21
      name: ftps
    - port: 21000
      name: ftps-data
  selector:
    io.kompose.service: ftps
  type: LoadBalancer
