srcs/yaml/service-grafana.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana
  labels:
    io.kompose.service: grafana
spec:
  ports:
  - port: 3000
    nodePort: 3000
    protocol: TCP
    name: http
  selector:
    io.kompose.service: grafana
  type: NodePort
