srcs/yaml/service-influxdb.yaml
apiVersion: v1
kind: Service
metadata:
  name: influxdb
  labels:
    app: influxdb
spec:
  type: NodePort
  ports:
  - port: 8086
    nodePort: 8086
    protocol: TCP
    name: influxdb
  selector:
    app: influxdb-app
