srcs/yaml/service-mysql.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mysql
  name: mysql
spec:
  type: NodePort
  ports:
  - name: "mysql"
    port: 3306
    nodePort: 3306
  selector:
    io.kompose.service: mysql
