srcs/yaml/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ssh
  labels:
    io.kompose.service: nginx-ssh
spec:
  ports:
    - name: ssh
      protocol: TCP
      port: 30022
      targetPort: 30022
      nodePort: 30022
  selector:
    io.kompose.service: nginx
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    io.kompose.service: nginx
spec:
  selector:
    io.kompose.service: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-https
  labels:
    io.kompose.service: nginx-https
spec:
  selector:
    io.kompose.service: nginx
  ports:
    - name: https
      nodePort: 443
      port: 443
  type: NodePort
