srcs/yaml/service-phpmyadmin.yaml
apiVersion: v1
kind: Service
metadata:
  name: phpmyadmin
  labels:
    io.kompose.service: phpmyadmin
spec:
  ports:
    - name: http
      port: 80
      nodePort: 5000
  selector:
    io.kompose.service: phpmyadmin
  type: NodePort
