srcs/yaml/service-telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf
  labels:
    app: telegraf-app
spec:
  type: NodePort
  ports:
  - port: 4999
    nodePort: 4999
    protocol: TCP
    name: http
  selector:
    app: telegraf-app
