srcs/yaml/service-wordpress.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    io.kompose.service: wordpress
spec:
  type: NodePort
  selector:
    io.kompose.service: wordpress
  ports:
  - name: http
    protocol: TCP
    port: 80
    nodePort: 5050
