srcs/yaml/telegraf.yaml
apiVersion: v1
kind: Service
metadata:
  name: telegraf-svc
  labels:
    app: telegraf-app
spec:
  type: NodePort
  ports:
  - port: 4999
    nodePort: 4999
    protocol: TCP
    name: http
  selector:
    app: telegraf-app
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: telegraf-deployment
  labels:
    app: telegraf-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: telegraf-app
  template:
    metadata:
      labels:
        app: telegraf-app
    spec:
      containers:
      - name: telegraf
        image: telegraf-image
        imagePullPolicy: Never
        ports:
        - containerPort: 4999
        volumeMounts:
        - name: config
          mountPath: "/etc/telegraf"
        - name: dockersock
          mountPath: "/var/run/docker.sock"
      volumes:
      - name: config
        configMap:
          name: telegraf-config
      - name: dockersock
        hostPath:
          path: /var/run/docker.sock
